// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches default snap 1`] = `
<div
  class="CardTitle"
>
  <h2>
    title
  </h2>
</div>
`;

exports[`matches default snap with subtitle 1`] = `
<div
  class="CardTitle"
>
  <h2>
    title
  </h2>
  <p>
    subtitle
  </p>
</div>
`;
